adding min attributeto inputs

--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
                     <ol class="fs-fields">
                         <li>
                             <label class="fs-field-label fs-anim-upper" for="q1" data-info="Les charges de votre entreprise chaque mois">Charges mensuelles</label>
-                            <input class="fs-anim-lower" id="q1" name="q1" type="number" placeholder="Charges en euros" required/>
+                            <input class="fs-anim-lower" id="q1" name="q1" type="number" placeholder="Charges en euros" min="0" required/>
                         </li>
                         <li>
                             <label class="fs-field-label fs-anim-upper" for="q2" data-info="Vos charges annuelles lissées sur 12 mois : par exemple CFE, expert comptable...">Provision de charge</label>
-                            <input class="fs-anim-lower" id="q2" name="q2" type="number" placeholder="Charges lissées en euro" required/>
+                            <input class="fs-anim-lower" id="q2" name="q2" type="number" placeholder="Charges lissées en euro" min="0" required/>
                         </li>
                         <li data-input-trigger>
                             <label class="fs-field-label fs-anim-upper" for="q3" data-info="Le salaire brut que vous désirez percevoir">Rémunération</label>
-                            <input class="fs-anim-lower" id="q3" name="q3" type="number" placeholder="Salaire brut" required/>
+                            <input class="fs-anim-lower" id="q3" name="q3" type="number" placeholder="Salaire brut" min="0" required/>
                         </li>
                         <li data-input-trigger>
                             <label class="fs-field-label fs-anim-upper" data-info="Votre chiffre d'affaire prévisionnel sur l'année">Chiffre d'affaire</label>
-                            <input class="fs-anim-lower" id="q4" name="q4" type="number" placeholder="Chiffre d'affaire en euro" required/>
+                            <input class="fs-anim-lower" id="q4" name="q4" type="number" placeholder="Chiffre d'affaire en euro" min="0" required/>
                         </li>
                     </ol>
                 </form>
